--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Loja de Tênis</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>4Shoes</h1>
+    <nav>
+      <ul>
+        <li><a href="#produto">Produtos</a></li>
+        <li><a href="#recursos">Recursos</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section id="produto" class="produto">
+    <h2>Nosso Produto</h2>
+    <div class="produto-conteudo">
+      <div class="produto-item">
+        <img src="./imagens/air.jpg" alt="Nike Air Force 1 Branco">
+        <div class="produto-info">
+          <h3>Nike Air Force 1 - Branco</h3>
+          <p>O clássico Nike Air Force 1, com design simples e elegante, perfeito para qualquer ocasião.</p>
+          <button>Comprar Agora</button>
+        </div>
+      </div>
+
+      <div class="produto-item">
+        <img src="./imagens/vermelho.jpeg" alt="Nike Jordan 1 Vermelho">
+        <div class="produto-info">
+          <h3>Nike Jordan 1 - Vermelho</h3>
+          <p>Com o estilo ousado do ícone Jordan, o modelo vermelho traz uma combinação de elegância e performance.</p>
+          <button>Comprar Agora</button>
+        </div>
+      </div>
+
+      <div class="produto-item">
+        <img src="./imagens/12mol.jpg" alt="Nike 12 Molas Preto">
+        <div class="produto-info">
+          <h3>Nike 12 Molas - Preto</h3>
+          <p>Design moderno e confortável, ideal para quem busca estilo e inovação no dia a dia.</p>
+          <button>Comprar Agora</button>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+</html>
 
